--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <br />
 
     <div>
-      <span>Valentin es cacorro</span>
-      <span>Valentin es cacorro</span>
-      <span>Valentin es cacorro</span>
+      <span>>Hola mundo</span>
+      <span>>Hola mundo</span>
+      <span>>Hola mundo</span>
+      <span>>Hola mundo</span>
     </div>
 
     <a href="http://globalmentoring.com.mx">Global Mentoring</a>
